--- a/src/scss/globals/global.scss
+++ b/src/scss/globals/global.scss
@@ -964,6 +964,8 @@ a {
   text-align: center;
   font-size: 0.9em;
   border-radius: 3px;
+  line-height: 1.3;
+  white-space: normal;
 }
 
 .fr-toolbar {
@@ -1064,6 +1066,38 @@ a {
 
 .mat-dalam-proses-color {
   background-color: #916000 !important;
+  color: white !important;
+  padding: 6px !important;
+}
+
+
+/** color private label */
+.mat-baru-color {
+  background-color: #ff9800 !important;
+  color: white !important;
+  padding: 6px !important;
+}
+
+.mat-dibatalkan-color {
+  background-color: #f44336 !important;
+  color: white !important;
+  padding: 6px !important;
+}
+
+.mat-diproses-color {
+  background-color: #916000 !important;
+  color: white !important;
+  padding: 6px !important;
+}
+
+.mat-dikirim-color {
+  background-color: #a5c267 !important;
+  color: white !important;
+  padding: 6px !important;
+}
+
+.mat-diterima-color {
+  background-color: #388e3c !important;
   color: white !important;
   padding: 6px !important;
 }
