change export import panel mitra delivery from xlsx to xls

--- a/src/app/pages/delivery-management/mitra-delivery-panel/import-panel-mitra-dialog/import-panel-mitra-dialog.component.html
+++ b/src/app/pages/delivery-management/mitra-delivery-panel/import-panel-mitra-dialog/import-panel-mitra-dialog.component.html
@@ -5,7 +5,7 @@
     <div fxFlex fxLayout="row" fxLayoutAlign="space-between center">
 
       <div fxFlex fxLayout="row" fxLayoutAlign="start center">
-        <span>Unggah File XLSX</span>
+        <span>Unggah File XLS</span>
       </div>
 
     </div>
@@ -18,7 +18,7 @@
   </mat-toolbar>
 
   <div mat-dialog-content class="p-24 m-0" fusePerfectScrollbar>
-    <div ngfDrop selectable="1" class="rectangle-16" [(validDrag)]="validComboDrag" [(file)]="files" accept=".xlsx"
+    <div ngfDrop selectable="1" class="rectangle-16" [(validDrag)]="validComboDrag" [(file)]="files" accept=".xls"
       [class.invalid-drag]="validComboDrag===false" [class.valid-drag]="validComboDrag" (fileChange)="preview($event)">
       <div class="p-24" fxLayout="column" fxLayoutAlign="center center">
         <mat-icon class="secondary-text s-48">attach_file</mat-icon>
