--- a/src/app/pages/src-catalogue/store-layout-template/index/store-layout-template.component.html
+++ b/src/app/pages/src-catalogue/store-layout-template/index/store-layout-template.component.html
@@ -1,9 +1,9 @@
 <div class="page-layout simple fullwidth" fxLayout="column" fusePerfectScrollbar>
   <!-- HEADER -->
-  <page-content-header [contentTitle]="'Notifikasi'">
+  <page-content-header [contentTitle]="'Template Layout Toko'">
     <div class="button-row" fxLayout="row">
       <button style="width: 170px;" mat-raised-button aria-label="Login" type="button"
-        [routerLink]="['/notifications', 'push-notification', 'create']">
+        [routerLink]="['/store-layout-template', '', 'create']">
         <mat-icon>add</mat-icon>BUAT
       </button>
     </div>
@@ -13,7 +13,7 @@
   <div class="content p-24" *ngIf="!onLoad">
     <div class="table-wrapper">
       <div fxLayout="row" fxLayoutAlign="space-between center" class="top-table pt-8">
-        <h2 class="pl-8">Daftar Notifikasi</h2>
+        <h2 class="pl-8">Daftar Template Layout Toko</h2>
         <div class="search-field" fxLayout="row" fxLayoutAlign="center center">
           <mat-icon>search</mat-icon>
           <mat-form-field class="is-light tab-search">
