finishing filter version

--- a/src/app/pages/user-management/customer/index/customer-index.component.html
+++ b/src/app/pages/user-management/customer/index/customer-index.component.html
@@ -21,6 +21,26 @@
           </mat-form-field>
         </div>
       </div>
+      <form [formGroup]="formFilterCustomer" autoComplete="off">
+        <div fxLayout="row wrap" fxLayout.lt-md="column" class="px-24 pt-16" fxLayoutGap="20px" fxLayoutGap.lt-md="0px"
+          style="margin-bottom: 25px;">
+          <mat-form-field fxFlex="20" class="is-light form-primary">
+            <mat-select placeholder="City" formControlName="city">
+              <mat-option *ngFor="let item of listCities" [value]="item.id">{{item.name}}</mat-option>
+            </mat-select>
+          </mat-form-field>
+          <mat-form-field fxFlex="20" class="is-light form-primary">
+            <mat-select placeholder="Apps Version" formControlName="version">
+              <mat-option *ngFor="let item of listVersions" [value]="item.version">{{item.version}}</mat-option>
+            </mat-select>
+          </mat-form-field>
+          <mat-form-field fxFlex="20" class="is-light form-primary">
+            <mat-select placeholder="Status" formControlName="status">
+              <mat-option *ngFor="let item of listStatus" [value]="item.value">{{item.name}}</mat-option>
+            </mat-select>
+          </mat-form-field>
+        </div>
+      </form>
       <ngx-datatable class="material" style="border-top: 1px solid #e3e3e3" [rows]="rows"
         [loadingIndicator]="loadingIndicator" [columnMode]="'force'" [headerHeight]="48" [footerHeight]="56"
         [rowHeight]="'auto'" [scrollbarH]="true" [offset]="offsetPagination" [reorderable]="reorderable"
